# annie-gravity-model

./: README.md  pyproject.toml
annie_gravity_model/: __init__.py  gravity_model.py  utility.py
examples/: fit_and_save_model.py  load_gravity_model.py  test.py
